# promptmap-API

./: .gitignore  README.md  controller_prompt.py  main.py  pyproject.toml  requests_to_llm.py
rules/jailbreak/: MEI.yaml  anthrax.yaml  grandma.yml  lgbt.yaml  narrative.yaml  rebel.yaml
scripts/: env_init.sh
