[tool.poetry]
name = "promptmap"
version = "0.1.0"
description = ""
authors = [piopy]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.107.0"
requests = "^2.32.5"
tiktoken = "^0.11.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
